2012-10-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Replace sizes given in points with sizes in user
	coordinates (nominally pixels = "px").  In empirical tests this makes
	the estimates generated for string width more accurate.  An alternative
	might be to give sizes in points multiplied by some internal variable
	that could be recalculated dynamically at display time.

	* term/svg.trm: Replace bundled style attributes with individual 
	specifications.  E.g.   
	    <g style="fill:none; stroke:rgb(0,0,0); font-size:10pt">
	becomes
	    <g fill="none" stroke="rgb(0,0,0)" font-size="10">

	* src/graph3d.c:  Suppress drawing of a degenerate keybox when
	"set key box" but no plot titles.  Bugfix.

	* src/graph3d.c src/show.c:  "set zlabel rotate parallel" should have
	the same effect as "set zlabel rotate".  Bugfix.

	* src/unset.c: `unset xrange` has done nothing but clear range_reverse.
	Make it also restore the default autoscaling and axis ranges.

2012-10-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotWidget.cpp (exportToSvg):
	Restrict svg output size to scaled viewport.  This gets rid of the
	oversize border around a plot exported from the qt terminal to svg.
	Empirical fix, results not guaranteed!
	Bug #3573897

2012-10-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.h src/interpol.c src/plot2d.c docs/gnuplot.doc:
	Make the bandwidth parameter of "smooth kdensity" a constant specified 
	in the plot command rather than a per-data point variable.  The latter
	has no obvious physical meaning and anyhow is problematic because it
	overloads the meaning of the 3rd 'using' spec.  New syntax:
	    plot foo smooth kdensity {bandwidth <val>}
	If no value is given, or if the value in negative, use the calculated
	optimum bandwidth.  Store the value used in GPVAL_KDENSITY_BANDWIDTH.

	* src/term.h:  Remove regis from the default set of supported terminals
