@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.751 2012/10/04 20:19:07 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.752 2012/10/09 22:06:41 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -9337,11 +9337,12 @@ Ffigure_missing
  several plots are placed on the same page, window, or screen.
 
  Syntax:
-       set multiplot { layout <rows>,<cols>
-                       {rowsfirst|columnsfirst} {downwards|upwards}
-                       {title <page title>}
-                       {scale <xscale>{,<yscale>}} {offset <xoff>{,<yoff>}}
-                     }
+       set multiplot
+           { title <page title> {font <fontspec>} {enhanced|noenhanced} }
+           { layout <rows>,<cols> 
+             {rowsfirst|columnsfirst} {downwards|upwards}
+             {scale <xscale>{,<yscale>}} {offset <xoff>{,<yoff>}}
+           }
        unset multiplot
 
  For some terminals, no plot is displayed until the command `unset multiplot`
