@@ -1,3 +1,8 @@
+2012-10-14  Ruediger Haertel  <haertel@users.sourceforge.net>
+
+	* src/term.c (term_start_multiplot) docs/gnuplot.doc:
+	Add enhanced/noenhanced option to "set multiplot title".
+
 2012-10-12  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/svg.trm: Replace sizes given in points with sizes in user
